--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.4",
+    "@angular/cdk": "^11.2.6",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
@@ -27,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -36,6 +39,7 @@
     "@angular/compiler-cli": "~11.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
